# avgfilter

./: Cargo.toml
src/: main.rs
