[package]
name = "avgfilter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
byte-slice-cast = "1.2.1"
env_logger = "0.9.0"
glib = "0.15.12"
gst = { version = "0.18.8", package = "gstreamer", features = ["v1_20"] }
gst-app = { version = "0.18.7", package = "gstreamer-app" }
gst-base = { version = "0.18.0", package = "gstreamer-base" }
gst-video = { version = "0.18.7", package = "gstreamer-video" }
log = "0.4.17"
once_cell = "1.13.0"
portal-screencast = "0.1.0"
